tests/snapshots/error-parser-outside_class_directive-before_class_dir-identifier.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----



HelloWorld
.class public HelloWorld
.super java/lang/Object
----- STDERR -----
[E-008] Error: unexpected identifier outside class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/before_class_dir/identifier.rns:4:1 ]
   │
 4 │ HelloWorld
   │ ─────┬────  
   │      ╰────── valid context for HelloWorld identifier is: 'operand'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
