tests/snapshots/error-parser-outside_class_directive-before_class_dir-string_literal.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
"Hello World"
.class public HelloWorld
.super java/lang/Object
----- STDERR -----
[E-008] Error: unexpected identifier outside class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/before_class_dir/string_literal.rns:1:1 ]
   │
 1 │ "Hello World"
   │ ──────┬──────  
   │       ╰──────── valid context for Hello World identifier is: 'operand'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
